--- a/packages/nightingale-console-example/package.json
+++ b/packages/nightingale-console-example/package.json
@@ -1,28 +1,41 @@
 {
   "name": "nightingale-console-example",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "",
   "keywords": [],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (https://christophe.hurpeau.com)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "engines": { "node": ">=6.5.0" },
+  "engines": {
+    "node": ">=6.5.0"
+  },
   "main": "./index.js",
   "typings": "./dist/index.d.ts",
   "module:node": "./dist/index-node8.es.js",
   "module:node-dev": "./dist/index-node8-dev.es.js",
-  "module:aliases-node": { "./children.js": "./dist/children-node8.es.js" },
-  "module:aliases-node-dev": { "./children.js": "./dist/children-node8-dev.es.js" },
+  "module:aliases-node": {
+    "./children.js": "./dist/children-node8.es.js"
+  },
+  "module:aliases-node-dev": {
+    "./children.js": "./dist/children-node8-dev.es.js"
+  },
   "scripts": {
     "build": "pob-build && tsc -p tsconfig.build.json --emitDeclarationOnly",
     "lint": "tsc --noEmit && eslint --ext .ts  src/",
     "test": "echo \"No tests\"",
     "watch": "pob-watch"
   },
-  "prettier": { "trailingComma": "all", "singleQuote": true, "printWidth": 100 },
-  "dependencies": { "nightingale": "^8.0.1", "nightingale-console": "^4.0.0" },
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true,
+    "printWidth": 100
+  },
+  "dependencies": {
+    "nightingale": "^8.0.2",
+    "nightingale-console": "^4.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.46",
     "babel-core": "7.0.0-bridge.0",
