--- a/packages/nightingale-string/package.json
+++ b/packages/nightingale-string/package.json
@@ -2,10 +2,7 @@
   "name": "nightingale-string",
   "version": "4.0.1",
   "description": "String handler for nightingale",
-  "keywords": [
-    "nightingale",
-    "nightingale-handler"
-  ],
+  "keywords": ["nightingale", "nightingale-handler"],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
