--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "packages/*/lib/**/*.json": ["prettier --write", "git add"],
     "packages/*/lib/**/*.js": ["eslint --fix --quiet", "git add"]
   },
-  "commitlint": { "extends": ["@commitlint/config-conventional"] },
+  "commitlint": {
+    "extends": ["@commitlint/config-conventional"]
+  },
   "devDependencies": {
     "@commitlint/cli": "^6.2.0",
     "@commitlint/config-conventional": "^6.1.3",
@@ -43,5 +45,7 @@
     "pob-release": "^4.1.1",
     "yarnhook": "^0.2.0"
   },
-  "resolutions": { "typescript": "^2.8.3" }
+  "resolutions": {
+    "typescript": "^2.8.3"
+  }
 }
