--- a/packages/nightingale-string/package.json
+++ b/packages/nightingale-string/package.json
@@ -1,8 +1,11 @@
 {
   "name": "nightingale-string",
-  "version": "4.0.1",
+  "version": "4.0.2",
   "description": "String handler for nightingale",
-  "keywords": ["nightingale", "nightingale-handler"],
+  "keywords": [
+    "nightingale",
+    "nightingale-handler"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
@@ -27,8 +30,8 @@
     "printWidth": 100
   },
   "dependencies": {
-    "nightingale-raw-formatter": "^3.0.1",
-    "nightingale-types": "^1.0.1"
+    "nightingale-raw-formatter": "^3.0.2",
+    "nightingale-types": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.46",
