--- a/packages/nightingale-types/package.json
+++ b/packages/nightingale-types/package.json
@@ -1,8 +1,10 @@
 {
   "name": "nightingale-types",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Nightingale types for typescript",
-  "keywords": ["logger"],
+  "keywords": [
+    "logger"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
@@ -24,7 +26,7 @@
     "printWidth": 100
   },
   "dependencies": {
-    "nightingale-levels": "^3.0.1"
+    "nightingale-levels": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
