--- a/packages/nightingale-web-processor/package.json
+++ b/packages/nightingale-web-processor/package.json
@@ -1,8 +1,11 @@
 {
   "name": "nightingale-web-processor",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Nightingale web processor",
-  "keywords": ["nightingale", "nightingale-processor"],
+  "keywords": [
+    "nightingale",
+    "nightingale-processor"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
@@ -26,7 +29,7 @@
     "printWidth": 100
   },
   "dependencies": {
-    "nightingale-types": "^1.0.1"
+    "nightingale-types": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.46",
