--- a/packages/nightingale-app-console/package.json
+++ b/packages/nightingale-app-console/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "nightingale": "^8.0.3",
     "nightingale-console": "^4.0.2",
+    "nightingale-browser-console": "^3.0.2",
     "source-map-support": "^0.4.14"
   },
   "devDependencies": {
