--- a/packages/nightingale-sentry/package.json
+++ b/packages/nightingale-sentry/package.json
@@ -2,10 +2,7 @@
   "name": "nightingale-sentry",
   "version": "4.0.2",
   "description": "Sentry handler for nightingale",
-  "keywords": [
-    "nightingale",
-    "nightingale-handler"
-  ],
+  "keywords": ["nightingale", "nightingale-handler"],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
@@ -35,7 +32,7 @@
     "raven": "^2.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.46",
+    "@babel/core": "^7.0.0-beta.48",
     "@types/raven": "^2.1.6",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
