--- a/packages/nightingale-browser-console/package.json
+++ b/packages/nightingale-browser-console/package.json
@@ -2,10 +2,7 @@
   "name": "nightingale-browser-console",
   "version": "3.0.2",
   "description": "Browser console handler for nightingale",
-  "keywords": [
-    "nightingale",
-    "nightingale-handler"
-  ],
+  "keywords": ["nightingale", "nightingale-handler"],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
@@ -39,8 +36,8 @@
     "nightingale-types": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/core": "^7.0.0-beta.48",
+    "@babel/preset-env": "^7.0.0-beta.48",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
     "babel-preset-modern-browsers": "^12.0.0-beta.1",
