--- a/packages/nightingale-string/package.json
+++ b/packages/nightingale-string/package.json
@@ -2,10 +2,7 @@
   "name": "nightingale-string",
   "version": "4.0.2",
   "description": "String handler for nightingale",
-  "keywords": [
-    "nightingale",
-    "nightingale-handler"
-  ],
+  "keywords": ["nightingale", "nightingale-handler"],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
@@ -34,7 +31,7 @@
     "nightingale-types": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.46",
+    "@babel/core": "^7.0.0-beta.48",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
     "babel-preset-latest-node": "^2.0.0-beta.3",
