--- a/packages/nightingale-web-processor/package.json
+++ b/packages/nightingale-web-processor/package.json
@@ -2,10 +2,7 @@
   "name": "nightingale-web-processor",
   "version": "3.0.2",
   "description": "Nightingale web processor",
-  "keywords": [
-    "nightingale",
-    "nightingale-processor"
-  ],
+  "keywords": ["nightingale", "nightingale-processor"],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
@@ -32,7 +29,7 @@
     "nightingale-types": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.46",
+    "@babel/core": "^7.0.0-beta.48",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
     "babel-preset-latest-node": "^2.0.0-beta.3",
