--- a/packages/nightingale-levels/package.json
+++ b/packages/nightingale-levels/package.json
@@ -1,8 +1,10 @@
 {
   "name": "nightingale-levels",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "Nightingale levels",
-  "keywords": ["logger"],
+  "keywords": [
+    "logger"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
