--- a/packages/nightingale-winston-adapter/package.json
+++ b/packages/nightingale-winston-adapter/package.json
@@ -1,8 +1,11 @@
 {
   "name": "nightingale-winston-adapter",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Winston adapter handler for nightingale",
-  "keywords": ["nightingale", "nightingale-handler"],
+  "keywords": [
+    "nightingale",
+    "nightingale-handler"
+  ],
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
@@ -36,7 +39,7 @@
   },
   "dependencies": {
     "nightingale-level-names": "^2.0.0",
-    "nightingale-types": "^1.0.2"
+    "nightingale-types": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.48",
