--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "0.0.0",
   "description": "Logger for browser and node",
   "keywords": [],
-  "author":
-    "Christophe Hurpeau <christophe@hurpeau.com> (https://christophe.hurpeau.com)",
+  "author": "Christophe Hurpeau <christophe@hurpeau.com> (https://christophe.hurpeau.com)",
   "license": "ISC",
   "repository": "git@github.com:christophehurpeau/nightingale.git",
   "homepage": "https://github.com/christophehurpeau/nightingale",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "lerna run --ignore \"*-example\" build",
     "commitmsg": "commitlint -e $GIT_PARAMS",
-    "generate:docs":
-      "lerna run --parallel --ignore \"*-example\" generate:docs",
+    "generate:docs": "lerna run --parallel --ignore \"*-example\" generate:docs",
     "lint": "lerna run --stream lint",
     "postcheckout": "yarnhook",
     "postmerge": "yarnhook",
@@ -30,22 +30,30 @@
       "prettier --write",
       "git add"
     ],
-    "packages/*/lib/**/*.json": ["prettier --write", "git add"],
-    "packages/*/lib/**/*.js": ["eslint --fix --quiet", "git add"]
+    "packages/*/lib/**/*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "packages/*/lib/**/*.js": [
+      "eslint --fix --quiet",
+      "git add"
+    ]
   },
   "commitlint": {
-    "extends": ["@commitlint/config-conventional"]
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^6.2.0",
-    "@commitlint/config-conventional": "^6.1.3",
+    "@commitlint/cli": "^7.0.0",
+    "@commitlint/config-conventional": "^7.0.1",
     "husky": "^0.14.3",
-    "lerna": "3.0.0-beta.18",
-    "lint-staged": "^7.1.2",
-    "pob-release": "^4.1.1",
+    "lerna": "3.0.0-beta.21",
+    "lint-staged": "^7.2.0",
+    "pob-release": "^4.1.2",
     "yarnhook": "^0.2.0"
   },
   "resolutions": {
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.2"
   }
 }
