--- a/packages/nightingale-ansi-formatter/package.json
+++ b/packages/nightingale-ansi-formatter/package.json
@@ -18,7 +18,7 @@
   "module:node": "./dist/index-node8.es.js",
   "module:node-dev": "./dist/index-node8-dev.es.js",
   "scripts": {
-    "build": "pob-build && tsc -p tsconfig.build.json --emitDeclarationOnly",
+    "build": "pob-build && tsc -p tsconfig.build.json --declarationMap --emitDeclarationOnly",
     "clean": "rm -Rf docs dist test/node6 coverage",
     "generate:test-coverage": "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=lcov --coverageDirectory=docs/coverage/",
     "lint": "tsc --noEmit && eslint --ext .ts  src/",
@@ -54,23 +54,23 @@
     "nightingale-types": "^1.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.48",
-    "@types/jest": "^22.2.3",
+    "@babel/core": "^7.0.0-beta.51",
+    "@types/jest": "^23.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
-    "babel-jest": "^22.4.3",
+    "babel-jest": "^23.0.1",
     "babel-preset-latest-node": "^2.0.0-beta.3",
     "eslint": "^4.19.1",
-    "eslint-config-pob": "^19.1.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-config-pob": "^20.0.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-typescript": "^0.12.0",
-    "jest": "^22.4.3",
-    "pob-babel": "^22.2.4",
-    "prettier": "^1.12.1",
-    "typescript": "^2.8.3",
-    "typescript-eslint-parser": "^15.0.0",
+    "jest": "^23.1.0",
+    "pob-babel": "^22.2.6",
+    "prettier": "^1.13.5",
+    "typescript": "^2.9.2",
+    "typescript-eslint-parser": "^16.0.0",
     "xunit-file": "^1.0.0"
   }
 }
