--- a/packages/nightingale-example/package.json
+++ b/packages/nightingale-example/package.json
@@ -30,7 +30,7 @@
     "./jsonConsole.js": "./dist/jsonConsole-node8-dev.es.js"
   },
   "scripts": {
-    "build": "pob-build && tsc -p tsconfig.build.json --emitDeclarationOnly",
+    "build": "pob-build && tsc -p tsconfig.build.json --declarationMap --emitDeclarationOnly",
     "lint": "tsc --noEmit && eslint --ext .ts  src/",
     "test": "echo \"No tests\"",
     "watch": "pob-watch"
@@ -49,19 +49,19 @@
     "nightingale-types": "^1.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.48",
+    "@babel/core": "^7.0.0-beta.51",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
     "babel-preset-latest-node": "^2.0.0-beta.3",
     "eslint": "^4.19.1",
-    "eslint-config-pob": "^19.1.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-config-pob": "^20.0.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-typescript": "^0.12.0",
-    "pob-babel": "^22.2.4",
-    "prettier": "^1.12.1",
-    "typescript": "^2.8.3",
-    "typescript-eslint-parser": "^15.0.0"
+    "pob-babel": "^22.2.6",
+    "prettier": "^1.13.5",
+    "typescript": "^2.9.2",
+    "typescript-eslint-parser": "^16.0.0"
   }
 }
