feat(nightingale-console): add options and json when not tty
support custom formatter or output as options

BREAKING CHANGE: output json by default when process.stdout.isTty is false

--- a/packages/nightingale-console/package.json
+++ b/packages/nightingale-console/package.json
@@ -34,6 +34,7 @@
     "nightingale-ansi-formatter": "^4.2.1",
     "nightingale-console-output": "^4.2.1",
     "nightingale-debug": "^5.2.1",
+    "nightingale-json-formatter": "^4.2.1",
     "nightingale-types": "^2.2.1"
   },
   "devDependencies": {
