--- a/packages/nightingale-example/src/.eslintrc.json
+++ b/packages/nightingale-example/src/.eslintrc.json
@@ -2,8 +2,7 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json",
-    "createDefaultProgram": true
+    "project": "packages/nightingale-example/tsconfig.json"
   },
   "plugins": [
     "@typescript-eslint"
