--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -7,6 +7,7 @@
     },
     "monorepo": {
       "ci": true,
+      "eslint": true,
       "testing": true,
       "codecov": true,
       "documentation": true,
