--- a/packages/nightingale-console-example/package.json
+++ b/packages/nightingale-console-example/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "build": "pob-build",
-    "lint": "eslint --ext .js,.ts --quiet *.js src",
+    "lint": "yarn --cwd ../.. eslint --ext .js,.ts --quiet packages/nightingale-console-example",
     "watch": "pob-watch"
   },
   "prettier": {
@@ -54,20 +54,8 @@
     "nightingale-console": "^10.0.1"
   },
   "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@pob/eslint-config": "37.1.0",
-    "@pob/eslint-config-babel-node": "37.0.2",
-    "@pob/eslint-config-node": "37.0.2",
-    "@pob/eslint-config-typescript": "37.1.0",
-    "@typescript-eslint/eslint-plugin": "2.34.0",
+    "@babel/core": "7.10.2",
     "babel-preset-latest-node": "4.1.0",
-    "eslint": "6.8.0",
-    "eslint-import-resolver-node": "0.3.3",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.1.3",
-    "eslint-plugin-unicorn": "18.0.1",
-    "pob-babel": "24.12.0",
-    "prettier": "2.0.5"
+    "pob-babel": "24.12.0"
   }
 }
