--- a/packages/nightingale-raw-formatter/package.json
+++ b/packages/nightingale-raw-formatter/package.json
@@ -40,7 +40,7 @@
     "build:definitions": "tsc -p tsconfig.build.json",
     "clean": "rm -Rf docs dist test/node6 coverage",
     "generate:test-coverage": "rm -Rf docs/coverage/ ; NODE_ENV=production BABEL_ENV=test jest --coverage --coverageReporters=pob-lcov-reporter --coverageDirectory=docs/coverage/",
-    "lint": "eslint --ext .js,.ts --quiet *.js src",
+    "lint": "yarn --cwd ../.. eslint --ext .js,.ts --quiet packages/nightingale-raw-formatter",
     "test": "jest",
     "test:watch": "jest",
     "watch": "pob-watch"
@@ -102,27 +102,16 @@
     "nightingale-types": "^10.0.1"
   },
   "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@babel/preset-env": "7.9.6",
-    "@pob/eslint-config": "37.1.0",
-    "@pob/eslint-config-node": "37.0.2",
-    "@pob/eslint-config-typescript": "37.1.0",
+    "@babel/core": "7.10.2",
+    "@babel/preset-env": "7.10.2",
     "@types/jest": "25.2.3",
-    "@typescript-eslint/eslint-plugin": "2.34.0",
     "babel-jest": "26.0.1",
     "babel-preset-latest-node": "4.1.0",
     "babel-preset-modern-browsers": "14.2.1",
-    "eslint": "6.8.0",
-    "eslint-import-resolver-node": "0.3.3",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.1.3",
-    "eslint-plugin-unicorn": "18.0.1",
     "jest": "26.0.1",
     "nightingale-levels": "^10.0.1",
     "pob-babel": "24.12.0",
     "pob-lcov-reporter": "2.3.0",
-    "prettier": "2.0.5",
     "xunit-file": "1.0.0"
   }
 }
