--- a/packages/nightingale-types/package.json
+++ b/packages/nightingale-types/package.json
@@ -20,7 +20,7 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "build:definitions": "tsc --lib esnext --noEmit ./lib/index.d.ts",
-    "lint": "eslint --quiet lib"
+    "lint": "yarn --cwd ../.. eslint --quiet packages/nightingale-types"
   },
   "prettier": {
     "trailingComma": "all",
@@ -30,16 +30,5 @@
   "pob": {},
   "dependencies": {
     "nightingale-levels": "^10.0.1"
-  },
-  "devDependencies": {
-    "@pob/eslint-config": "37.1.0",
-    "@pob/eslint-config-node": "37.0.2",
-    "eslint": "6.8.0",
-    "eslint-import-resolver-node": "0.3.3",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.1.3",
-    "eslint-plugin-unicorn": "18.0.1",
-    "prettier": "2.0.5"
   }
 }
