chore: update pob and improve typings

--- a/packages/nightingale-browser-console/src/.eslintrc.json
+++ b/packages/nightingale-browser-console/src/.eslintrc.json
@@ -4,10 +4,6 @@
   "parserOptions": {
     "project": "packages/nightingale-browser-console/tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "extends": [
-    "@pob/eslint-config-typescript"
-  ]
+  "plugins": ["@typescript-eslint"],
+  "extends": ["@pob/eslint-config-typescript"]
 }
