--- a/packages/nightingale-example/src/.eslintrc.json
+++ b/packages/nightingale-example/src/.eslintrc.json
@@ -4,11 +4,16 @@
   "parserOptions": {
     "project": "packages/nightingale-example/tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "@pob/eslint-config-typescript",
-    "@pob/eslint-config-babel-node"
-  ]
+    "@pob/eslint-config-typescript-node"
+  ],
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["./node_modules", "./src"]
+      }
+    }
+  }
 }
