--- a/packages/nightingale-ansi-formatter/src/.eslintrc.json
+++ b/packages/nightingale-ansi-formatter/src/.eslintrc.json
@@ -4,19 +4,14 @@
   "parserOptions": {
     "project": "packages/nightingale-ansi-formatter/tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "@pob/eslint-config-typescript",
-    "@pob/eslint-config-babel-node"
+    "@pob/eslint-config-typescript-node"
   ],
   "overrides": [
     {
-      "files": [
-        "**/*.test.ts",
-        "__tests__/**/*.ts"
-      ],
+      "files": ["**/*.test.ts", "__tests__/**/*.ts"],
       "env": {
         "jest": true
       },
