--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-unicorn": "23.0.0"
   },
   "devDependencies": {
+    "@chrp/typedoc-plugin-lerna-packages": "0.4.1",
     "@pob/commitlint-config": "2.0.1",
     "@pob/eslint-config": "41.0.4",
     "@pob/eslint-config-node": "41.0.4",
@@ -75,7 +76,6 @@
     "husky": "4.3.0",
     "prettier": "2.1.2",
     "typedoc": "0.19.2",
-    "typedoc-plugin-lerna-packages": "0.3.1",
     "typescript": "4.0.5"
   }
 }
